name:                vtmtracker
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vtmtracker#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          
  static/*.html
  static/css/*.css
  static/css/*.css.map
  static/css/*.min.css
  static/css/*.min.css.map
  static/fonts/*.eot
  static/fonts/*.ttf
  static/fonts/*.woff
  static/fonts/*.svg
  static/fonts/*.woff2
  static/js/*.js
  static/js/*.min.js
  
  

executable vtmtracker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       wai-middleware-static,
                       filepath,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       lens,
                       transformers,
                       mtl,
                       text,
                       monad-logger,
                       http-types
